# jsonata-python

./: .gitignore  README.md  noxfile.py  pyproject.toml  tangible_generate_main.py
.github/workflows/: test.yml
samples/jsonata/: main.py  mainjson.py
samples/main-gson/src/main/java/: Main.py
samples/main-jackson/src/main/java/: Main.py
samples/main/src/main/java/: Main.py  MainJson.py
src/: helloworld.json
src/jsonata/: constants.py  datetimeutils.py  functions.py  jexception.py  jsonata.py  parser.py  regex_engine.py  signature.py  timebox.py  tokenizer.py  utils.py
src/jsonata/cli/: __main__.py
src/main/java/: module-info.py
src/main/java/com/dashjoin/jsonata/: Functions.py  JException.py  Jsonata.py  Parser.py  Timebox.py  Tokenizer.py  Utils.py
src/main/java/com/dashjoin/jsonata/json/: Json.py  JsonHandler.py  JsonParser.py  Location.py  ParseException.py
src/main/java/com/dashjoin/jsonata/utils/: Constants.py  DateTimeUtils.py  Signature.py
src/main/java/java/text/: DecimalFormat.py  DecimalFormatSymbols.py  DigitList.py  FieldPosition.py  Format.py  NumberFormat.py  ParsePosition.py
src/test/java/com/dashjoin/jsonata/: CustomFunctionTest.py  Generate.py  JsonataTest.py  NullSafetyTest.py  SerializationTest.py  SignatureTest.py  StringTest.py  ThreadTest.py  TypesTest.py
tests/: array_test.py  custom_function_test.py  generate.py  jsonata_test.py  null_safety_test.py  re2_engine_test.py  requirements.txt  signature_test.py  string_test.py  test-overrides.json  thread_test.py  types_test.py
