[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "jsonata-python"
version = "0.1.0"
description = "Pure Python implementation of JSONata"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["jsonata"]
authors = [
  {name = "Robert Yokota" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python"
]

[project.urls]
"Homepage" = "https://github.com/rayokota/jsonata-python"
"Bug Reports" = "https://github.com/rayokota/jsonata-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/jsonata"]